RESOLVED FIXED71478
Fix up chromium API for creating events, initializing message events
https://bugs.webkit.org/show_bug.cgi?id=71478
Summary Fix up chromium API for creating events, initializing message events
Dave Michael
Reported 2011-11-03 09:19:25 PDT
Fix up chromium API for creating events, initializing message events
Attachments
Patch (3.86 KB, patch)
2011-11-03 09:33 PDT, Dave Michael
no flags
Patch (3.89 KB, patch)
2011-11-04 07:48 PDT, Dave Michael
no flags
Patch (3.92 KB, patch)
2011-11-15 13:26 PST, Dave Michael
no flags
Patch (3.93 KB, patch)
2011-11-16 09:26 PST, Dave Michael
no flags
Dave Michael
Comment 1 2011-11-03 09:33:45 PDT
Dave Michael
Comment 2 2011-11-03 09:35:20 PDT
Comment on attachment 113506 [details] Patch Note: initMessageEvent is not used yet in Chromium, so it's safe to change until the referenced Chromium CL lands.
WebKit Review Bot
Comment 3 2011-11-03 09:35:39 PDT
Please wait for approval from fishd@chromium.org before submitting because this patch contains changes to the Chromium public API.
Darin Fisher (:fishd, Google)
Comment 4 2011-11-03 22:36:17 PDT
Comment on attachment 113506 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=113506&action=review > Source/WebKit/chromium/src/WebDOMMessageEvent.cpp:58 > + static_cast<const WebFrameImpl*>(sourceFrame)->frame()->domWindow(); don't you need to assign domWindow() to 'window' ?
Dave Michael
Comment 5 2011-11-04 07:48:57 PDT
Dave Michael
Comment 6 2011-11-04 07:50:19 PDT
(In reply to comment #4) > (From update of attachment 113506 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=113506&action=review > > > Source/WebKit/chromium/src/WebDOMMessageEvent.cpp:58 > > + static_cast<const WebFrameImpl*>(sourceFrame)->frame()->domWindow(); > > don't you need to assign domWindow() to 'window' ? Definitely. Nice catch. Speaking of, is there a good place to add a unit test for this? Should I do that, or does the ui_test in chromium (which doesn't cover this code path right now) suffice?
Dave Michael
Comment 7 2011-11-15 13:26:11 PST
Dave Michael
Comment 8 2011-11-15 13:26:56 PST
Comment on attachment 115228 [details] Patch Merged. PTAL.
Darin Fisher (:fishd, Google)
Comment 9 2011-11-16 09:19:05 PST
Comment on attachment 115228 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115228&action=review > Source/WebKit/chromium/ChangeLog:6 > +- Fix a mistake when checking the exception code during event creation. nit: fix indentation here > Source/WebKit/chromium/src/WebDOMMessageEvent.cpp:58 > + window = nit: webkit style does not enforce line length limits, so this should just be on one line.
Dave Michael
Comment 10 2011-11-16 09:26:56 PST
WebKit Review Bot
Comment 11 2011-11-16 13:14:33 PST
Comment on attachment 115393 [details] Patch Clearing flags on attachment: 115393 Committed r100497: <http://trac.webkit.org/changeset/100497>
WebKit Review Bot
Comment 12 2011-11-16 13:14:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.