Fix up chromium API for creating events, initializing message events https://bugs.webkit.org/show_bug.cgi?id=71478

- Fix a mistake when checking the exception code during event creation.
- Change WebFrame parameter to pointer so that NULL may be passed.

This is required for the following chromium CL: http://codereview.chromium.org/8437093/

Tested in Chromium by:
 ui_test --gtest_filter=*PPAPITest.PostMessage*

Patch by Dave Michael <dmichael@chromium.org> on 2011-11-16
Reviewed by Darin Fisher.

* public/WebDOMMessageEvent.h:
* src/WebDOMMessageEvent.cpp:
(WebKit::WebDOMMessageEvent::initMessageEvent):
* src/WebDocument.cpp:
(WebKit::WebDocument::createEvent):

Canonical link: https://commits.webkit.org/89023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100497 268f45cc-cd09-0410-ab3c-d52691b4dbfc